# thewayofgo

./: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.kilo/plans/: engine-ai-cleanup.md  twinkling-snacking-adventure.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: eyes.rs  influence.rs  joseki.rs  ladder.rs  mcts.rs  mod.rs  shapes.rs  styles.rs
src-tauri/src/commands/: exercise_commands.rs  game_commands.rs  mod.rs  progress_commands.rs
src-tauri/src/db/: progress.rs
src-tauri/src/engine/: board_utils.rs  game.rs  mod.rs  types.rs
src/components/Board/: Board.tsx
src/components/Exercise/: ExerciseCard.tsx  ExerciseCatalog.tsx  ExerciseFilters.tsx  ExercisePlayer.tsx  ExercisePlayerSidebar.tsx  ExerciseView.tsx  index.ts
src/components/Game/: GamePlay.tsx  GameReview.tsx
src/components/Home/: Home.tsx
src/components/Layout/: Layout.tsx
src/components/Learn/: StudyPlan.tsx
src/components/Lesson/: LessonViewer.tsx
src/components/Onboarding/: OnboardingWizard.tsx
src/components/PositionEditor/: PositionEditor.tsx  index.ts
src/components/Progress/: AchievementsPanel.tsx  ActivityHeatmap.tsx  (+3 more)
src/data/: curriculum.ts  exerciseCatalog.ts
src/hooks/: useKeyboardShortcuts.ts
src/stores/: appStore.ts
src/types/: index.ts
src/utils/: adaptiveDifficulty.ts  boardUtils.ts  gameHistory.ts  goals.ts  lessonPath.ts  progressDb.ts  sessionManager.ts  soundEngine.ts  srs.ts  themes.ts  weaknessEngine.ts
(+340 files in other folders)
