[package]
name = "thewayofgo"
version = "0.1.0"
description = "The Way of Go - Interactive Go learning application"
authors = ["murat"]
edition = "2021"

[lib]
name = "thewayofgo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
goban = "0.20.1"
rand = "0.10.0"
thiserror = "2.0.18"
specta = "2.0.0-rc"
tauri-specta = { version = "2.0.0-rc", features = ["typescript"] }
