[package]
name = "thewayofgo"
version = "0.1.0"
description = "The Way of Go - Interactive Go learning application"
authors = ["murat"]
edition = "2021"

[lib]
name = "thewayofgo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10.0"
rayon = "1"
thiserror = "2.0.18"
